# docs/swagger.json
@@ -75,9 +75,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "token",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.TokenDetails"
                         }
                     },
                     "400": {
@@ -134,9 +134,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "token",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handler.TokenDetails"
                         }
                     },
                     "400": {
@@ -187,7 +187,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/handler.signUpInput"
                         }
                     }
                 ],
@@ -195,7 +195,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/handler.TokenDetails"
                         }
                     },
                     "400": {
@@ -310,7 +310,10 @@
                 "access_token": {
                     "type": "string"
                 },
-                "expires_at": {
+                "expires_in": {
+                    "type": "integer"
+                },
+                "refresh_expires_in": {
                     "type": "integer"
                 },
                 "refresh_token": {
@@ -334,6 +337,29 @@
             ],
             "properties": {
                 "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.signUpInput": {
+            "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
                     "type": "string"
                 },
                 "password": {
